# BlackPearl-MutiThread-GL

./: CMakeLists.txt  README.md  settings.gradle.kts
app/: build.gradle  build.gradle.kts
app/src/androidTest/java/com/example/blackpearl_multithread_gl_andriod/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/BlackPearl-MultiThread-GL/: Demo.cpp  Engine.cpp  Engine.h  GLRenderLoop.cpp  GLRenderLoop.h  Looper.cpp  Looper.h  MultiThread.cpp  RenderCommandList.cpp  RenderCommandList.h  Window.cpp  Window.h  pch.h
app/src/main/cpp/BlackPearl-MultiThread-GL/egl/: EglCore.cpp  EglSurfaceBase.cpp  WindowSurface.cpp
app/src/main/cpp/BlackPearl-MultiThread-GL/render/: EGLRender.cpp  EGLRender.h
app/src/main/cpp/BlackPearl-MultiThread-GL/util/: GLUtils.cpp  GLUtils.h
app/src/main/java/com/example/blackpearl_multithread_gl_andriod/: MainActivity.java  MyGLRender.java  MyNativeRender.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/blackpearl_multithread_gl_andriod/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
src/: GLRenderLoop.cpp  GLRenderLoop.h  Looper.cpp  MultiThread.cpp  RenderCommandList.cpp  RenderCommandList.h  Window.cpp  Window.h  pch.h
